bug: Added min-width to button small

--- a/@navikt/core/css/button.css
+++ b/@navikt/core/css/button.css
@@ -53,6 +53,7 @@
 
   padding: var(--ac-button-padding-small, var(--__ac-button-padding));
   min-height: 2rem;
+  min-width: 2rem;
 }
 
 .navds-button--xsmall {
